--- a/_site.yml
+++ b/_site.yml
@@ -25,6 +25,8 @@ navbar:
       menu:
       - text: "Designing experiments"
         href: DesigningExperiments.html
+    - text: "Contact"
+      href: 0contactinfo.html
 output:
   html_document:
     theme: lumen
