--- a/_site.yml
+++ b/_site.yml
@@ -9,27 +9,33 @@ navbar:
       href: index.html
     - text: "Examples"
       menu:
-      - text: "CRD_Mead1993"
-        href: CRD_Mead1993.html
-      - text: "RCBD_ClewerScarisbrick2001"
-        href: RCBD_ClewerScarisbrick2001.html
-      - text: "latsquare_Bridges1989"
-        href: latsquare_Bridges1989.html
-      - text: "augmented_Pattersen1994"
-        href: augmented_Pattersen1994.html
-      - text: "alpha_JohnWilliams1995"
-        href: alpha_JohnWilliams1995.html
-      - text: "rowcol_KemptonFox1997"
-        href: rowcol_KemptonFox1997.html
-      - text: "subsampling_Piepho1997"
-        href: subsampling_Piepho1997.html
-      - text: "splitplot_GomezGomez1984"
-        href: splitplot_GomezGomez1984.html
-      - text: "splitplot_StreetFruit"
-        href: splitplot_StreetFruit.html
-      - text: "repeated measures"
+      - text: "Getting Started"
         menu:
-        - text: "RCBD_PiephoEdmondson2018"
+        - text: "R Basics"
+          href: rbasics.html
+      - text: "Simple Experiments"
+        menu:
+        - text: "crd_Mead1993"
+          href: CRD_Mead1993.html
+        - text: "rcbd_ClewerScarisbrick2001"
+          href: RCBD_ClewerScarisbrick2001.html
+        - text: "latsquare_Bridges1989"
+          href: latsquare_Bridges1989.html
+        - text: "augmented_Pattersen1994"
+          href: augmented_Pattersen1994.html
+        - text: "alpha_JohnWilliams1995"
+          href: alpha_JohnWilliams1995.html
+        - text: "rowcol_KemptonFox1997"
+          href: rowcol_KemptonFox1997.html
+        - text: "splitplot_GomezGomez1984"
+          href: splitplot_GomezGomez1984.html
+      - text: "Complex Experiments"
+        menu:
+        - text: "subsampling_Piepho1997"
+          href: subsampling_Piepho1997.html
+        - text: "splitplot_StreetFruit"
+          href: splitplot_StreetFruit.html
+        - text: "rcbd_PiephoEdmondson2018"
           href: Repeated_RCBD_PiephoEdmondson2018.html
     - text: "Summaries"
       menu:
